Restart the study

--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -142,27 +142,7 @@
    "id": "3a828ec0",
    "metadata": {},
    "source": [
-    "###### Printing \"Hello\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "2ad8df4c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello\n",
-      "God\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Hello')\n",
-    "print('God')"
+    "###### Python \"print()\" Function"
    ]
   },
   {
@@ -171,6 +151,226 @@
    "metadata": {},
    "source": [
     "> Note: It is very simple to print hello in python, as compared to other programming languages, coding in python is really less time consuming than other programming languages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d32ed4f9",
+   "metadata": {},
+   "source": [
+    "###### 1. Basic Print:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2ad8df4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b26a27b8",
+   "metadata": {},
+   "source": [
+    "###### 2. Multiple arguments:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "69b83787",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World Universe\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\", \"World\", \"Universe\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c40954",
+   "metadata": {},
+   "source": [
+    "###### 3. Using sep parameter to change separator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "17c03cfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello-World-Universe\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\", \"World\", \"Universe\", sep=\"-\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79b3b43e",
+   "metadata": {},
+   "source": [
+    "###### 4. Using end parameter to change line ending:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b87eb12f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\", end=\" \")\n",
+    "print(\"World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "5b7def05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World World-"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello\", end=\" \")\n",
+    "print(\"World\", end=\" \")\n",
+    "print(\"World\", end=\"-\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b516de3",
+   "metadata": {},
+   "source": [
+    "###### 5. Formatting with f-strings (Python 3.6+):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "234158b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Abhimanyu!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Abhimanyu\"\n",
+    "print(f\"Hello, {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88cd578a",
+   "metadata": {},
+   "source": [
+    "###### 6. Using file parameter to print into the file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d2d95492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"output.txt\", \"w\") as f:\n",
+    "    print(\"Hello, World, Universe..!\", file=f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90ca4014",
+   "metadata": {},
+   "source": [
+    "###### 7. Suppressing the newline:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "eaa5c659",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Default behavior\n",
+    "print(\"Hello\")\n",
+    "print(\"World\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1f9b0290",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloWorld\n"
+     ]
+    }
+   ],
+   "source": [
+    "# With newline suppressed\n",
+    "print(\"Hello\", end=\"\")\n",
+    "print(\"World\")"
    ]
   },
   {
