--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d32ed4f9",
+   "id": "d149732b",
    "metadata": {},
    "source": [
     "###### 1. Basic Print:"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b26a27b8",
+   "id": "49d31cff",
    "metadata": {},
    "source": [
     "###### 2. Multiple arguments:"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "69b83787",
+   "id": "97781a67",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c40954",
+   "id": "4d34cf71",
    "metadata": {},
    "source": [
     "###### 3. Using sep parameter to change separator:"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "17c03cfd",
+   "id": "6519f275",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79b3b43e",
+   "id": "f4d1221f",
    "metadata": {},
    "source": [
     "###### 4. Using end parameter to change line ending:"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b87eb12f",
+   "id": "6a56b986",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5b7def05",
+   "id": "a9e7ca8d",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b516de3",
+   "id": "e0201911",
    "metadata": {},
    "source": [
     "###### 5. Formatting with f-strings (Python 3.6+):"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "234158b5",
+   "id": "998201dd",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88cd578a",
+   "id": "c948e1f0",
    "metadata": {},
    "source": [
     "###### 6. Using file parameter to print into the file:"
@@ -316,17 +316,18 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d2d95492",
+   "id": "f2330fac",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"output.txt\", \"w\") as f:\n",
-    "    print(\"Hello, World, Universe..!\", file=f)"
+    "    print(\"Hello, World, Universe..!\", file=f)\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "90ca4014",
+   "id": "e83ae0fb",
    "metadata": {},
    "source": [
     "###### 7. Suppressing the newline:"
@@ -335,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eaa5c659",
+   "id": "83f5a38d",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1f9b0290",
+   "id": "81cddfba",
    "metadata": {},
    "outputs": [
     {
