--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d149732b",
+   "id": "9b15c7db",
    "metadata": {},
    "source": [
     "###### 1. Basic Print:"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49d31cff",
+   "id": "781021fe",
    "metadata": {},
    "source": [
     "###### 2. Multiple arguments:"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "97781a67",
+   "id": "33c05d38",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d34cf71",
+   "id": "83c30781",
    "metadata": {},
    "source": [
     "###### 3. Using sep parameter to change separator:"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6519f275",
+   "id": "99818d2b",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d1221f",
+   "id": "9a6e00a8",
    "metadata": {},
    "source": [
     "###### 4. Using end parameter to change line ending:"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6a56b986",
+   "id": "4bc9d3dc",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a9e7ca8d",
+   "id": "cc74b74b",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0201911",
+   "id": "5aec6e15",
    "metadata": {},
    "source": [
     "###### 5. Formatting with f-strings (Python 3.6+):"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "998201dd",
+   "id": "ca23f68d",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c948e1f0",
+   "id": "124a9cd8",
    "metadata": {},
    "source": [
     "###### 6. Using file parameter to print into the file:"
@@ -316,18 +316,17 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f2330fac",
+   "id": "c1b1813f",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"output.txt\", \"w\") as f:\n",
-    "    print(\"Hello, World, Universe..!\", file=f)\n",
-    "    "
+    "    print(\"Hello, World, Universe..!\", file=f)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e83ae0fb",
+   "id": "3d6471b6",
    "metadata": {},
    "source": [
     "###### 7. Suppressing the newline:"
@@ -336,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "83f5a38d",
+   "id": "e9516ea1",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "81cddfba",
+   "id": "2a39cbbe",
    "metadata": {},
    "outputs": [
     {
