--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b15c7db",
+   "id": "2d5bc431",
    "metadata": {},
    "source": [
     "###### 1. Basic Print:"
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "781021fe",
+   "id": "684fdf4e",
    "metadata": {},
    "source": [
     "###### 2. Multiple arguments:"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "33c05d38",
+   "id": "e0141fe3",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c30781",
+   "id": "5b0bcade",
    "metadata": {},
    "source": [
     "###### 3. Using sep parameter to change separator:"
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "99818d2b",
+   "id": "c2d30a8d",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a6e00a8",
+   "id": "02b79994",
    "metadata": {},
    "source": [
     "###### 4. Using end parameter to change line ending:"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "4bc9d3dc",
+   "id": "1aa28f20",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cc74b74b",
+   "id": "6b0e4900",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aec6e15",
+   "id": "38884d37",
    "metadata": {},
    "source": [
     "###### 5. Formatting with f-strings (Python 3.6+):"
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "ca23f68d",
+   "id": "cfa72cf1",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124a9cd8",
+   "id": "31521f9a",
    "metadata": {},
    "source": [
     "###### 6. Using file parameter to print into the file:"
@@ -316,17 +316,20 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "c1b1813f",
+   "id": "e4386f83",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"output.txt\", \"w\") as f:\n",
-    "    print(\"Hello, World, Universe..!\", file=f)"
+    "    print(\"Hello, World, Universe..!\", file=f)\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3d6471b6",
+   "id": "fa3ca1d0",
    "metadata": {},
    "source": [
     "###### 7. Suppressing the newline:"
@@ -335,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "e9516ea1",
+   "id": "e126d509",
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2a39cbbe",
+   "id": "900fba21",
    "metadata": {},
    "outputs": [
     {
