Folder Name Changed

--- a/100Days_of_Python_Code/Biginner/Day1 - Print Input Function Variables.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day1 - Print Input Function Variables.ipynb
@@ -496,16 +496,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5234bec2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "c4efb183",
    "metadata": {},
    "outputs": [
     {
@@ -514,17 +506,24 @@
      "text": [
       "Welcome to the Band Name Generator.\n",
       "What's the name of the city you grew up in?\n",
-      "Pune\n",
+      "Ramapur\n",
       "What's your pet's name?\n",
-      "Mavla\n",
-      "Your band name could be Pune Mavla\n"
+      "Gajya\n",
+      "Your band name could be Ramapur Gajya\n"
      ]
     }
    ],
    "source": [
+    "#1. Create a greeting for your program.\n",
     "print(\"Welcome to the Band Name Generator.\")\n",
-    "street = input(\"What's the name of the city you grew up in?\\n\")\n",
-    "pet = input(\"What's your pet's name?\\n\")\n",
+    "\n",
+    "#2. Ask the user for the city that they grew up in.\n",
+    "street = input(\"What's the name of the city you grew up in?\\n\") # Make sure the input cursor shows on a new line:\n",
+    "\n",
+    "#3. Ask the user for the name of a pet.\n",
+    "pet = input(\"What's your pet's name?\\n\") # Make sure the input cursor shows on a new line:\n",
+    "\n",
+    "#4. Combine the name of their city and pet and show them their band name.\n",
     "print(\"Your band name could be \" + street + \" \" + pet)"
    ]
   },
