--- a/Digvi_python_end_to_end_for_ml.ipynb
+++ b/Digvi_python_end_to_end_for_ml.ipynb
@@ -616,7 +616,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de710820",
    "metadata": {},
@@ -2310,6 +2309,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "4b5f6f9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello, World!\".isprintable())  # True\n",
+    "print(\"12345\".isprintable())  # True\n",
+    "print(\" \".isprintable())  # True (space is printable)\n",
+    "print(\"Hello\\nWorld\".isprintable())  # False (contains newline character)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e7669fc4",
    "metadata": {},
@@ -2634,7 +2657,7 @@
     "\n",
     ">> 3. str to int / float / complex >>> # (string contains only numbers)\n",
     "\n",
-    ">> ###### Note : can't convert complex to any other data type"
+    ">> ###### Note : can't convert complex to any other data type but we can take real number from complex that we can convert as per int/float/str"
    ]
   },
   {
@@ -2678,17 +2701,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "ba6530d7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100.1, (100.1+0j), '100.1')"
+       "(100, (100.1+0j), '100.1')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2696,7 +2719,7 @@
    "source": [
     "f=100.100\n",
     "\n",
-    "float(f), complex(f), str(f)"
+    "int(f), complex(f), str(f)"
    ]
   },
   {
@@ -2710,17 +2733,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "65c83d44",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(100.0, (100+0j), '100')"
+       "(100.0, (100+0j), '100', 100)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2728,7 +2751,7 @@
    "source": [
     "s='100'\n",
     "\n",
-    "float(s), complex(s), str(s)"
+    "float(s), complex(s), str(s), int(s)"
    ]
   },
   {
@@ -2762,6 +2785,142 @@
     "print(complex(10.20,4)) # 10.2+4j\n",
     "\n",
     "print(complex(True,False)) # 1+0j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2471b9d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = 10+2j"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8207c7e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10,)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(c.real), "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "85fc5d1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10.0'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(c.real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4a9d3e13",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(c.real)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a3b3f360",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float(c.imag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4508081a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(c.imag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ba3bded2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2.0'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(c.imag)"
    ]
   },
   {
