--- a/100Days_of_Python_Code/Biginner/Day3 - Conditional Statements, Logical Operators, Code Blocks and Scope.ipynb
+++ b/100Days_of_Python_Code/Biginner/Day3 - Conditional Statements, Logical Operators, Code Blocks and Scope.ipynb
@@ -985,20 +985,120 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b108e3bd",
+   "id": "380eb45a",
    "metadata": {},
    "source": [
-    "### 4. Day3 Project - Treasure Island"
+    "###### Excersize - LOVE Calculator"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "bde52a27",
+   "metadata": {},
+   "source": [
+    "You are going to write a program that tests the compatibility between two people.\n",
+    "\n",
+    "To work out the love score between two people:\n",
+    "\n",
+    "Take both people's names and check for the number of times the letters in the word TRUE occurs.\n",
+    "\n",
+    "Then check for the number of times the letters in the word LOVE occurs.\n",
+    "\n",
+    "Then combine these numbers to make a 2 digit number.\n",
+    "\n",
+    "For Love Scores less than 10 or greater than 90, the message should be:\n",
+    "\n",
+    "\"Your score is *x*, you go together like coke and mentos.\"\n",
+    "For Love Scores between 40 and 50, the message should be:\n",
+    "\n",
+    "\"Your score is *y*, you are alright together.\"\n",
+    "Otherwise, the message will just be their score. e.g.:\n",
+    "\n",
+    "\"Your score is *z*.\"\n",
+    "e.g.\n",
+    "\n",
+    "name1 = \"Angela Yu\"\n",
+    "name2 = \"Jack Bauer\"\n",
+    "T occurs 0 times\n",
+    "\n",
+    "R occurs 1 time\n",
+    "\n",
+    "U occurs 2 times\n",
+    "\n",
+    "E occurs 2 times\n",
+    "\n",
+    "Total = 5\n",
+    "\n",
+    "L occurs 1 time\n",
+    "\n",
+    "O occurs 0 times\n",
+    "\n",
+    "V occurs 0 times\n",
+    "\n",
+    "E occurs 2 times\n",
+    "\n",
+    "Total = 3\n",
+    "\n",
+    "Love Score = 53\n",
+    "\n",
+    "Print: \"Your score is 53.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c548f2fd",
+   "execution_count": 6,
+   "id": "ae23b8f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The love calculator is calculating your score...\n",
+      "What is your name ? : pandurang\n",
+      "What is their name ? : nandini\n",
+      "Your score is 20.\n"
+     ]
+    }
+   ],
    "source": [
-    "# print source = https://ascii.co.uk/art/treasure"
+    "print(\"The love calculator is calculating your score...\")\n",
+    "name1 = input(\"What is your name ? : \")\n",
+    "name2 = input(\"What is their name ? : \")\n",
+    "\n",
+    "combined_names = name1 + name2\n",
+    "lower_names = combined_names.lower()\n",
+    "\n",
+    "t = lower_names.count(\"t\")\n",
+    "r = lower_names.count(\"r\")\n",
+    "u = lower_names.count(\"u\")\n",
+    "e = lower_names.count(\"e\")\n",
+    "\n",
+    "first_digit = t + r + u + e\n",
+    "\n",
+    "l = lower_names.count(\"l\")\n",
+    "o = lower_names.count(\"o\")\n",
+    "v = lower_names.count(\"v\")\n",
+    "e = lower_names.count(\"e\")\n",
+    "\n",
+    "second_digit = l + o + v + e\n",
+    "\n",
+    "score = int(str(first_digit) + str(second_digit))\n",
+    "\n",
+    "if (score < 10) or (score > 90):\n",
+    "    print(f\"Your score is {score}, you go together like coke and mentos.\")\n",
+    "elif (score >=40) and (score <= 50):\n",
+    "    print(f\"Your score is {score}, you are alright together.\")\n",
+    "else:\n",
+    "    print(f\"Your score is {score}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b108e3bd",
+   "metadata": {},
+   "source": [
+    "### 4. Day3 Project - Treasure Island"
    ]
   },
   {
@@ -1012,6 +1112,16 @@
    "metadata": {},
    "source": [
     "![image.png](attachment:image.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c548f2fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print source = https://ascii.co.uk/art/treasure"
    ]
   },
   {
@@ -1104,22 +1214,6 @@
     "else:\n",
     "    print(\"Fall into a hole Game Over\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0225e882",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f4c6b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
